@@ -107,6 +107,9 @@ section "ML System"
 public option ML_exception_trace : bool = false
   -- "ML exception trace for toplevel command execution"
 
+public option ML_exception_debugger : bool = false
+  -- "ML debugger exception trace for toplevel command execution"
+
 public option ML_debugger : bool = false
   -- "ML debugger instrumentation for newly compiled code"
 
