@@ -190,8 +190,9 @@ use "ML/ml_syntax.ML";
 use "ML/ml_env.ML";
 use "ML/ml_options.ML";
 use "ML/exn_output.ML";
+use_no_debug "ML/exn_debugger.ML";
 use "ML/ml_options.ML";
-use "Isar/runtime.ML";
+use_no_debug "Isar/runtime.ML";
 use "PIDE/execution.ML";
 use "ML/ml_compiler.ML";
 
